--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="shop">Магазин</string>
     <string name="profile">Профиль</string>
     <string name="cart">Корзина</string>
+    <string name="offers">Предложение ограничено</string>
+    <string name="best_price">Лучшая цена</string>
 
 
 
