--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="cart">Корзина</string>
     <string name="offers">Предложение ограничено</string>
     <string name="best_price">Лучшая цена</string>
-    <string name="search_product">Поиск товара</string>
+    <string name="search_product">Поиск товаров</string>
     <string name="mini_wash">7 430 ₽/шт \n Минимойка Sterwins 135, 135 бар, 420 л/ч, 2 кВт</string>
     <string name="napkin">122 ₽/шт \n Салфетка, 35x35 см, микрофибра, 4 шт.</string>
     <string name="wiper">3 498 ₽/шт \n Стеклоочиститель Bosch GlassVac Solo</string>
